# suppgram

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  alembic.ini  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: static_checks.yml  tests.yml
docs/: index.md  requirements.txt
docs/development/: agent_frontends.md  architecture_overview.md  bridges.md  contribution_guide.md  core_entities.md  customer_frontends.md  manager_frontends.md  storages.md
docs/features/: customizing_texts.md  mongodb_integration.md  pubnub_integration.md  sql_integration.md  telegram_integration.md
docs/usage/: all_in_one_cli.md  builder.md  customizing_texts.md  quickstart.md  updating.md
suppgram/: __main__.py  analytics.py  application.py  backend.py  builder.py  containers.py  emoji.py  entities.py  errors.py  frontend.py  helpers.py  interfaces.py  logging.py  observer.py  permissions.py  storage.py
suppgram/backends/: default.py  local.py
suppgram/bridges/: inmemory_telegram.py  mongodb_telegram.py  sqlalchemy_telegram.py
suppgram/cli/: all_in_one.py  pubnub_customer_client.py
suppgram/frontends/: instagram.py  shell.py
suppgram/frontends/pubnub/: __init__.py  configuration.py  converter.py  customer_frontend.py  errors.py  identification.py
suppgram/frontends/shell/: __init__.py  customer_frontend.py
suppgram/frontends/telegram/: __init__.py  agent_frontend.py  app_manager.py  callback_actions.py  customer_frontend.py  helper.py  helpers.py  identification.py  interfaces.py  manager_frontend.py  permission_checkers.py  storage.py  user_frontend.py  workplace_manager.py
suppgram/storages/: inmemory.py  sqlalchemy.py  test_sqlalchemy.py
suppgram/storages/mongodb/: __init__.py  collections.py  storage.py
suppgram/storages/sqlalchemy/: __init__.py  models.py  storage.py
suppgram/storages/sqlalchemy/alembic/: env.py
suppgram/storages/sqlalchemy/alembic/versions/: 48f9a7635310_initial_revision.py  5fc7b901794b_support_images.py  78877fb69405_initial_revision.py  fd93d2874998_support_images.py
suppgram/texts/: __init__.py  en.py  interface.py  ru.py
tests/: conftest.py  storage.py  test_emoji.py
tests/bridges/: test_inmemory_telegram.py  test_mongodb_telegram.py  test_sqlalchemy_telegram.py
tests/frontends/telegram/: conftest.py  storage.py  test_agent_frontend.py  test_customer_frontend.py
tests/storages/: test_inmemory.py  test_mongodb.py  test_sqlalchemy.py
