[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suppgram"
version = "0.0.10"
authors = [
  { name="Tigran Saluev", email="tigran@saluev.com" },
]
maintainers = [
  { name="Tigran Saluev", email="tigran@saluev.com" },
]
description = "Minimalistic support system with Telegram-based UI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click~=8.1.7",
]

[project.optional-dependencies]
dev = [
    "mkdocs~=1.5.3",
    "mkdocstrings~=0.24.0",
    "mkdocstrings-python~=1.7.5",
    "mypy~=1.7.1",
    "mypy-extensions~=1.0.0",
    "pytest~=7.4.2",
    "pytest-mock~=3.12.0",
    "pytest-asyncio~=0.21.1",
    "ruff~=0.1.6",
]
mongodb = ["motor~=3.3.2"]
pubnub = [
    "aioconsole~=0.6.2",
    "pubnub~=7.3.1",
]
shell = ["aioconsole~=0.6.2"]
sqlalchemy = [
    "aiosqlite~=0.19.0",
    "alembic~=1.13.1",
    "asyncpg~=0.29.0",
    "SQLAlchemy~=2.0.22",
]
sqlalchemy_slim = ["SQLAlchemy~=2.0.22"]
telegram = ["python-telegram-bot~=20.6"]

[project.urls]
Homepage = "https://github.com/Saluev/suppgram"
Documentation = "https://suppgram.readthedocs.org"
Repository = "https://github.com/Saluev/suppgram.git"
Issues = "https://github.com/Saluev/suppgram/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
suppgram = ["alembic.ini"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
